test/errors/type/collections/set/__gt.yasl
echo mt.lookup(collections.set(), .__gt)(collections.set(), true)
